tests/tools/checker/negative/direct_self_field.nv
struct Node {
    next: Node;
}

fn main() : void {
    return;
}
